[package]
name = "labubu-assets"
version = "0.1.0"
authors = ["Luis Schwab <luisschwab@protonmail.com>"]
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.6", default-features = false, features = [
    "std",
    "serde",
    "secp-recovery",
    "rand",
] }
secp256k1 = { version = "0.29.0", features = [
    "global-context",
    "serde",
    "rand",
] }
dioxus = { version = "0.6.3", features = ["router"] }
esplora-client = { version = "0.11.0", default-features = false, features = [
    "tokio",
    "async-https-rustls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
web-sys = { version = "0.3.77", default-features = false, features = [
    "Clipboard",
    "Window",
    "Navigator",
    "Permissions",
    "Storage",
] }
wasm-bindgen-futures = "0.4.50"
reqwest-wasm = { version = "0.11.16", default-features = false, features = [
    "json",
] }
reqwest = "0.11.16"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }


[dev-dependencies]
tokio = { version = "1.47.0", features = ["rt", "macros"] }
reqwest = { version = "0.11.16", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
